// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: @supports.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "display": "grid"
    },
    "@supports not (display: grid)": {
      "float": "right"
    }
  },
  "testComplex": {
    "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
      "color": "red"
    },
    "@supports (transform-style: preserve) or (-moz-transform-style: preserve) or (-o-transform-style: preserve) or (-webkit-transform-style: preserve)": {
      "color": "red"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  ._3GKV06._3GKV06 {
    display: grid;
  }
}
@supports not (display: grid) {
  ._1cjV2G._1cjV2G {
    float: right;
  }
}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {
  ._3DO79H._3DO79H {
    color: #f00;
  }
}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) or
  (-o-transform-style: preserve) or (-webkit-transform-style: preserve) {
  ._4mzMj8._4mzMj8 {
    color: #f00;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_3GKV06 _1cjV2G"

className={styles('testComplex')}
  ↓ ↓ ↓
class="_3DO79H _4mzMj8"

`;

exports[`matches expected output: @supports-nested.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "color": "red",
      "@supports not (display: grid)": {
        "color": "blue",
        "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
          "color": "orange"
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  ._3LkwQx._3LkwQx {
    color: #f00;
  }
  @supports not (display: grid) {
    ._3KVzHX._3KVzHX {
      color: #00f;
    }
    @supports (display: table-cell) and
      ((display: list-item) and (display: run-in)) {
      ._39dw1H._39dw1H {
        color: #ffa500;
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_3LkwQx _3KVzHX _39dw1H"

`;

exports[`matches expected output: @unknown.error.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@unknown": {
      "color": "red"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Invariant Violation: Unsupported rule "@unknown"
`;

exports[`matches expected output: media-queries.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "color": "red",
    "@media print": {
      "color": "red"
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
@media print {
  .zIzjk.zIzjk {
    color: #f00;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._27Xk5F._27Xk5F {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="wUqnh zIzjk _27Xk5F"

`;

exports[`matches expected output: media-queries-multiple.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "color": "red",
    "fontSize": 32,
    "@media print": {
      "color": "red",
      "fontSize": 16
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  },
  "bbb": {
    "@media print": {
      "color": "green"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
._2ZJp7Y {
  font-size: 2rem;
}
@media print {
  .zIzjk.zIzjk {
    color: #f00;
  }
  .uxyoC.uxyoC {
    font-size: 1rem;
  }
  .v2909.v2909 {
    color: #008000;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._27Xk5F._27Xk5F {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="wUqnh _2ZJp7Y zIzjk uxyoC _27Xk5F"

className={styles('bbb')}
  ↓ ↓ ↓
class="v2909"

`;

exports[`matches expected output: media-queries-nested.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media print": {
      "color": "red",
      "@media (max-width: 12cm)": {
        "color": "blue"
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media print {
  .zIzjk.zIzjk {
    color: #f00;
  }
  @media (max-width: 12cm) {
    .Uxdbe.Uxdbe {
      color: #00f;
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="zIzjk Uxdbe"

`;

exports[`matches expected output: media-queries-nested-deep.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media (max-width: 10cm)": {
      "color": "#F00000",
      "backgroundColor": "#FFFFFF",
      "@media (max-width: 9cm)": {
        "color": "#0F0000",
        "backgroundColor": "#FFFFFF",
        "@media (max-width: 8cm)": {
          "color": "#00F000",
          "backgroundColor": "#FFFFFF",
          "@media (max-width: 7cm)": {
            "color": "#000F00",
            "backgroundColor": "#FFFFFF",
            "@media (max-width: 6cm)": {
              "color": "#0000F0",
              "backgroundColor": "#FFFFFF",
              "@media (max-width: 5cm)": {
                "color": "#00000F",
                "backgroundColor": "#FFFFFF"
              }
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media (max-width: 10cm) {
  ._4bGnnn._4bGnnn {
    color: #f00000;
  }
  ._1kQaJH._1kQaJH {
    background-color: #fff;
  }
  @media (max-width: 9cm) {
    ._21BNws._21BNws {
      color: #0f0000;
    }
    ._3Lm6Uw._3Lm6Uw {
      background-color: #fff;
    }
    @media (max-width: 8cm) {
      ._2sV160._2sV160 {
        color: #00f000;
      }
      ._1bLvdm._1bLvdm {
        background-color: #fff;
      }
      @media (max-width: 7cm) {
        ._3TWByw._3TWByw {
          color: #000f00;
        }
        ._1adr9y._1adr9y {
          background-color: #fff;
        }
        @media (max-width: 6cm) {
          ._1EWUxi._1EWUxi {
            color: #0000f0;
          }
          ._2g7PIB._2g7PIB {
            background-color: #fff;
          }
          @media (max-width: 5cm) {
            ._3l858s._3l858s {
              color: #00000f;
            }
            ._22f0H3._22f0H3 {
              background-color: #fff;
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_4bGnnn _1kQaJH _21BNws _3Lm6Uw _2sV160 _1bLvdm _3TWByw _1adr9y _1EWUxi _2g7PIB _3l858s _22f0H3"

`;

exports[`matches expected output: media-queries-nested-pseudo.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "media": {
    "color": "red",
    "@media print": {
      "color": "red",
      ":hover": {
        "color": "pink"
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
@media print {
  .zIzjk.zIzjk {
    color: #f00;
  }
  ._4rAdwD._4rAdwD:hover {
    color: #ffc0cb;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('media')}
  ↓ ↓ ↓
class="wUqnh zIzjk _4rAdwD"

`;

exports[`matches expected output: media-queries-same-style.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "style1": {
    "@media (min-width: 1280px)": {
      "color": "red"
    },
    "color": "blue"
  },
  "style2": {
    "color": "red"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media (min-width: 1280px) {
  ._3ZCUJ6._3ZCUJ6 {
    color: #f00;
  }
}
._4fo5TC {
  color: #00f;
}
.wUqnh {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('style1')}
  ↓ ↓ ↓
class="_3ZCUJ6 _4fo5TC"

className={styles('style2')}
  ↓ ↓ ↓
class="wUqnh"

`;

exports[`matches expected output: pseudo-classes.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
._22QzO9:hover {
  text-decoration: underline;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="_134wwt _22QzO9"

`;

exports[`matches expected output: pseudo-classes-multiple.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "none",
      "color": "red"
    },
    ":active": {
      "color": "red"
    }
  },
  "bbb": {
    ":hover": {
      "color": "blue"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
.XJjf5:hover {
  text-decoration: none;
}
._4sFdkU:hover {
  color: #f00;
}
.UddGc:hover {
  color: #00f;
}
.ERwS0:active {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="_134wwt XJjf5 _4sFdkU ERwS0"

className={styles('bbb')}
  ↓ ↓ ↓
class="UddGc"

`;

exports[`matches expected output: pseudo-elements.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    },
    "::after": {
      "content": "∞"
    },
    "::before": {
      "content": "∞"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
._22QzO9:hover {
  text-decoration: underline;
}
._2Rpe4g::after {
  content: "∞";
}
._3ou8wp::before {
  content: "∞";
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="_134wwt _22QzO9 _2Rpe4g _3ou8wp"

`;

exports[`matches expected output: simple-stylesheet.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "redStyle": {
    "color": "red"
  },
  "blueStyle": {
    "color": "blue"
  },
  "greenStyle": {
    "color": "green"
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
._4fo5TC {
  color: #00f;
}
.PJDYD {
  color: #008000;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('redStyle')}
  ↓ ↓ ↓
class="wUqnh"

className={styles('blueStyle')}
  ↓ ↓ ↓
class="_4fo5TC"

className={styles('greenStyle')}
  ↓ ↓ ↓
class="PJDYD"

`;
